# kay-vault

./: .gitignore  LICENSE  README.en.md  README.md  README.zh.md  SHA-PIN.py  deploy.ps1  index.html  package-lock.json  package.json  启动-调试程序.bat  部署-到磁盘.bat
docs/: encryption-design.md  project-report.md
docs/superpowers/plans/: 2026-06-30-key-vault-implementation.md
docs/superpowers/specs/: 2026-06-30-key-vault-design.md
src/: App.vue  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: api_keys.rs  auth.rs  backup.rs  config.rs  crypto.rs  lib.rs  main.rs  session.rs  sha_pin.rs  vault.rs
src/components/: BackupPanel.vue  DeviceAuthList.vue  LockScreen.vue  PasswordCard.vue  PasswordForm.vue  PasswordGenerator.vue
src/router/: index.ts
src/stores/: app.ts  vault.ts
src/styles/: theme.css
src/utils/: clipboard.ts
src/views/: ApiKeysView.vue  GeneratorView.vue  SettingsView.vue  TerminalView.vue  VaultView.vue
