[package]
name = "key-vault"
version = "0.1.0"
description = "凯伊密码管家 - Key Vault"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "key_vault_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[profile.release]
opt-level = "z"
lto = true
strip = true
codegen-units = 1

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde_json = "1"
serde = { version = "1", features = ["derive"] }
log = "0.4"
tauri = { version = "2", features = [] }
tauri-plugin-log = "2"
tauri-plugin-single-instance = "2"
tauri-plugin-dialog = "2"
aes-gcm = "0.10"
argon2 = "0.5"
password-hash = "0.5"
rand = "0.8"
uuid = { version = "1", features = ["v4"] }
hex = "0.4"
chrono = { version = "0.4", features = ["serde"] }
sha2 = "0.10"
# Pin time to avoid breaking change with cookie crate
time = ">=0.3.36, <0.3.52"
